package br.com.psytecnology.domain.entity;

import br.com.psytecnology.domain.enums.StatusPedido;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

import javax.persistence.*;
import java.math.BigDecimal;
import java.time.LocalDate;
import java.util.List;

@Data
@NoArgsConstructor
@AllArgsConstructor
@Entity
@Table(name = "pedido")
public class Pedido {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "id")
    private Integer id;

    @ManyToOne
    @JoinColumn(name = "cliente_id")
    private Cliente cliente;

    @Column(name = "data_pedido")
    private LocalDate dataPedido;

    @Column(name = "total", precision = 20, scale = 2)
    private BigDecimal total;

    @Enumerated(EnumType.STRING)
    @Column(name = "status")
    private StatusPedido status;

    @OneToMany(mappedBy = "pedido")
    private List<ItemPedido> itens;

    public Pedido id(Integer id) {
        this.id = id;
        return this;
    }

    public Pedido cliente(Cliente cliente) {
        this.cliente = cliente;
        return this;
    }

    public Pedido dataPedido(LocalDate dataPedido) {
        this.dataPedido = dataPedido;
        return this;
    }

    public Pedido total(BigDecimal total) {
        this.total = total;
        return this;
    }

    public Pedido status(StatusPedido status){
        this.status = status;
        return this;
    }

    public Pedido itens(List<ItemPedido> itens) {
        this.itens = itens;
        return this;
    }

}
